--- a/BigSchool/BigSchool.csproj
+++ b/BigSchool/BigSchool.csproj
@@ -217,6 +217,10 @@
     <Compile Include="Migrations\202107090114156_AddIsCanceledColumnToCourse.Designer.cs">
       <DependentUpon>202107090114156_AddIsCanceledColumnToCourse.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107141017346_AddFollowingNotification.cs" />
+    <Compile Include="Migrations\202107141017346_AddFollowingNotification.Designer.cs">
+      <DependentUpon>202107141017346_AddFollowingNotification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -225,12 +229,15 @@
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Following.cs" />
+    <Compile Include="Models\FollowingNotification.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CoursesViewModel.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
     <Compile Include="ViewModels\CustomViewModel.cs" />
+    <Compile Include="ViewModels\FollowingViewModel.cs" />
+    <Compile Include="ViewModels\FollowNotificationViewModel.cs" />
     <Compile Include="ViewModels\FutureDate.cs" />
     <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
@@ -296,6 +303,9 @@
     <Content Include="Views\Courses\Create.cshtml" />
     <Content Include="Views\Courses\Attending.cshtml" />
     <Content Include="Views\Courses\Mine.cshtml" />
+    <Content Include="Views\Courses\Following.cshtml" />
+    <Content Include="Views\Courses\FollowingMeList.cshtml" />
+    <Content Include="Views\Courses\FollowNotification.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -336,6 +346,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107090114156_AddIsCanceledColumnToCourse.resx">
       <DependentUpon>202107090114156_AddIsCanceledColumnToCourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107141017346_AddFollowingNotification.resx">
+      <DependentUpon>202107141017346_AddFollowingNotification.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
